Cambiando métodos a Async Task<>

--- a/Priorities_Homework/Priorities_Homework.csproj
+++ b/Priorities_Homework/Priorities_Homework.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Prioridades.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="microsoft.entityframeworkcore.sqlite" Version="8.0.1" />
     <PackageReference Include="microsoft.entityframeworkcore.tools" Version="8.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
