--- a/Priorities_Homework/appsettings.json
+++ b/Priorities_Homework/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConStr": "Data Source = Data\\Tickets.Db"
+    "ConStr": "Data Source = Data\\TicketsManagement.Db"
   },
   "Logging": {
     "LogLevel": {
